--- a/src/web/src/app/pages/solvers-overview/solvers-overview.html
+++ b/src/web/src/app/pages/solvers-overview/solvers-overview.html
@@ -1,4 +1,4 @@
-<h1>Fluid Dynamics Solvers</h1>
+<h1>Solvers</h1>
 
 @for(solver of solvers(); track solver.displayName){
 <a [routerLink]="'/solvers/' + solver.displayName">
